# surface-registration

./: .gitignore  CMakeLists.txt  README.md
cmake/: Catch.cmake  CatchAddTests.cmake
include/: point_triangle_distance.h  random_points_on_mesh.h
src/: closest_rotation.cpp  hausdorff_lower_bound.cpp  icp_single_iteration.cpp  point_mesh_distance.cpp  point_to_plane_rigid_matching.cpp  point_to_point_rigid_matching.cpp  point_triangle_distance.cpp  random_points_on_mesh.cpp
test/: CMakeLists.txt  point_mesh_distance_test.cpp  point_triangle_distance_test.cpp  random_points_on_mesh_test.cpp
